--- a/style.css
+++ b/style.css
@@ -2,3 +2,15 @@ body{
     margin: 0;
     padding: 0;
 }
+header{
+    display: grid;
+    grid-template-columns: 50% 12.5% 12.5% 12.5% 12.5%;
+    grid-template-rows: 10%;
+}
+div{
+    background-color: gray;
+    margin: auto;
+    padding: 2%;
+    color: honeydew;
+    font-size: 20px;
+}
